<resources>
    <string name="app_name">Testing APIs</string>
    <string name="request_method">Request Method</string>
    <string name="url">Url</string>
    <string name="www_example_com">www.example.com</string>
    <string name="headers">Headers</string>
    <string name="add_items">Add items</string>
    <string name="remove_items">Remove items</string>
    <string name="request">Request</string>
    <string name="parameters">Parameters</string>
    <string name="value">Value</string>
    <string name="key">Key</string>

    <string-array name="request_method_spinner">
        <item>GET</item>
        <item>POST</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="tab_navigation">Tab Navigation</string>
    <string name="status_code_tab">Status</string>
    <string name="response_tab">Response</string>
    <string name="header_tab">Headers</string>
    <string name="logo">logo</string>
    <string name="post_body">Post Body</string>
    <string name="post_body_hint">{\"userName\": \"Hamdy\"}</string>
    <string name="cached_request">Cached Request</string>

</resources>